--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "stripe": "^14.0.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "postmark": "^4.0.5",
+    "stripe": "^14.0.0"
   }
 }
