--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
+  "name": "bankmaps-dashboard",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "echo ok",
+    "start": "echo ok"
+  },
   "dependencies": {
-    "type": "module",
+    "cookie": "^0.6.0",
     "pg": "^8.11.3",
     "postmark": "^4.0.5",
     "stripe": "^14.0.0"
