--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cookie": "^0.6.0",
     "pg": "^8.11.3",
     "postmark": "^4.0.5",
-    "stripe": "^14.0.0"
+    "stripe": "^14.0.0",
+    "@neondatabase/serverless": "^0.9.0"
   }
 }
