--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "bankmaps",
   "version": "1.0.0",
   "private": true,
-  "scripts": { "build": "echo ok", "start": "echo ok" },
+  "scripts": {
+    "build": "echo ok",
+    "start": "echo ok"
+  },
   "dependencies": {
     "cookie": "^0.6.0",
     "pg": "^8.11.3",
