--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pg": "^8.11.3",
     "postmark": "^4.0.5",
     "stripe": "^14.0.0",
-    "@neondatabase/serverless": "^0.9.0"
+    "@neondatabase/serverless": "^0.9.0",
+    "express": "^4.19.2"
   }
 }
