--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "api": "node api/server.js"
-  }
+  },
   "dependencies": {
     "cookie": "^0.6.0",
     "pg": "^8.11.3",
@@ -15,8 +15,8 @@
     "stripe": "^14.0.0",
     "@neondatabase/serverless": "^0.9.0",
     "express": "^4.19.2",
-    "next": "latest",              // ← add this line if missing
-    "react": "latest",             // ← add if missing
-    "react-dom": "latest"          // ← add if missing
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   }
 }
