--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "api": "node api/server.js"
   },
   "dependencies": {
-    "cookie": "^0.6.0",
-    "pg": "^8.11.3",
-    "postmark": "^4.0.5",
-    "stripe": "^14.0.0",
     "@neondatabase/serverless": "^0.9.0",
+    "cookie": "^0.6.0",
     "express": "^4.19.2",
     "next": "latest",
+    "pg": "^8.11.3",
+    "postmark": "^4.0.5",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "stripe": "^14.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.1.0",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
+    "typescript": "^5.9.3"
   }
 }
