--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "api": "node api/server.js"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.9.0",
+"@neondatabase/serverless": "latest"
     "cookie": "^0.6.0",
     "drizzle-orm": "^0.45.1",
     "express": "^4.19.2",
