--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
     "api": "node api/server.js"
   },
   "dependencies": {
-"@neondatabase/serverless": "latest"
     "cookie": "^0.6.0",
-    "drizzle-orm": "^0.45.1",
-    "express": "^4.19.2",
-    "groq-sdk": "latest",
-    "next": "latest",
     "pg": "^8.11.3",
     "postmark": "^4.0.5",
+    "stripe": "^14.0.0",
+    "@neondatabase/serverless": "^0.9.0",
+    "express": "^4.19.2",
+    "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "stripe": "^14.0.0"
+    "drizzle-orm": "latest",
+    "groq-sdk": "latest"
   },
   "devDependencies": {
-    "@types/node": "latest",
+    "typescript": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
-    "typescript": "latest"
+    "@types/node": "latest"
   }
 }
