--- a/package.json
+++ b/package.json
@@ -6,24 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-      },
+    "lint": "eslint"
+  },
   "dependencies": {
-    "cookie": "^0.6.0",
-    "pg": "^8.11.3",
-    "postmark": "^4.0.5",
-    "stripe": "^14.0.0",
-    "@neondatabase/serverless": "latest",
-    "express": "^4.19.2",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "drizzle-orm": "latest",
-    "groq-sdk": "latest"
+    "@neondatabase/serverless": "^1.0.2",
+    "drizzle-orm": "^0.45.1",
+    "groq-sdk": "^0.37.0",
+    "next": "16.1.6",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   },
   "devDependencies": {
-    "typescript": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/node": "latest"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "babel-plugin-react-compiler": "1.0.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.6",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
