--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "drizzle-orm": "^0.45.1",
     "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.3",
+    "mysql2": "^3.17.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
