--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "@turf/turf": "^7.3.4",
     "drizzle-orm": "^0.45.1",
     "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.3",
