Add mapbox-gl package

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "drizzle-orm": "^0.45.1",
     "groq-sdk": "^0.37.0",
     "jsonwebtoken": "^9.0.3",
+    "mapbox-gl": "^3.18.1",
     "mysql2": "^3.17.0",
     "next": "16.1.6",
     "react": "19.2.3",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
     "@types/postmark": "^1.4.1",
     "@types/react": "^19",
